--- a/classes/faiconthemeclass.html
+++ b/classes/faiconthemeclass.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>BSTreeViewEventOptions | @jbtronics/bs-treeview</title>
+	<title>FAIconThemeClass | @jbtronics/bs-treeview</title>
 	<meta name="description" content="Documentation for @jbtronics/bs-treeview">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>
+					<a href="faiconthemeclass.html">FAIconThemeClass</a>
 				</li>
 			</ul>
-			<h1>Class BSTreeViewEventOptions</h1>
+			<h1>Class FAIconThemeClass</h1>
 		</div>
 	</div>
 </header>
@@ -69,7 +69,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>The options for all kinds of functions in the TreeView</p>
+						<p>Use this theme to use Font Awesome icons in the treeview.</p>
 					</div>
 				</div>
 			</section>
@@ -77,22 +77,14 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">BSTreeViewEventOptions</span>
-						<ul class="tsd-hierarchy">
-							<li>
-								<a href="bstreesearchoptions.html" class="tsd-signature-type">BSTreeSearchOptions</a>
-							</li>
-							<li>
-								<a href="bstreeviewdisableoptions.html" class="tsd-signature-type">BSTreeViewDisableOptions</a>
-							</li>
-							<li>
-								<a href="bstreeviewexpandoptions.html" class="tsd-signature-type">BSTreeViewExpandOptions</a>
-							</li>
-							<li>
-								<a href="bstreeviewselectoptions.html" class="tsd-signature-type">BSTreeViewSelectOptions</a>
-							</li>
-						</ul>
+						<span class="target">FAIconThemeClass</span>
 					</li>
+				</ul>
+			</section>
+			<section class="tsd-panel">
+				<h3>Implements</h3>
+				<ul class="tsd-hierarchy">
+					<li><a href="../interfaces/bstreeviewtheme.html" class="tsd-signature-type">BSTreeViewTheme</a></li>
 				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
@@ -100,104 +92,33 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Constructors</h3>
+							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="bstreevieweventoptions.html#constructor" class="tsd-kind-icon">constructor</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section ">
-							<h3>Properties</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="bstreevieweventoptions.html#_force" class="tsd-kind-icon">_force</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreevieweventoptions.html#ignorechildren" class="tsd-kind-icon">ignore<wbr>Children</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreevieweventoptions.html#lazyload" class="tsd-kind-icon">lazy<wbr>Load</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreevieweventoptions.html#silent" class="tsd-kind-icon">silent</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="faiconthemeclass.html#getoptions" class="tsd-kind-icon">get<wbr>Options</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Constructors</h2>
-				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class">
-					<a name="constructor" class="tsd-anchor"></a>
-					<h3>constructor</h3>
-					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new BSTree<wbr>View<wbr>Event<wbr>Options<span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a></li>
+				<h2>Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="getoptions" class="tsd-anchor"></a>
+					<h3>get<wbr>Options</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Options<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="bstreeviewoptions.html" class="tsd-signature-type">BSTreeViewOptions</a><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
+								<p>Implementation of <a href="../interfaces/bstreeviewtheme.html">BSTreeViewTheme</a>.<a href="../interfaces/bstreeviewtheme.html#getoptions">getOptions</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L16">lib/BSTreeViewEventOptions.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/themes/FAIconTheme.ts#L8">lib/themes/FAIconTheme.ts:8</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> options: <a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = null</span></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="bstreeviewoptions.html" class="tsd-signature-type">BSTreeViewOptions</a><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-private">
-					<a name="_force" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagPrivate">Private</span> _force</h3>
-					<div class="tsd-signature tsd-kind-icon">_force<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L16">lib/BSTreeViewEventOptions.ts:16</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Force a change of the node state, even if the vaklue is not changed. Mostly useful for internal usage</p>
-						</div>
-						<dl class="tsd-comment-tags">
-							<dt>internal</dt>
-							<dd></dd>
-						</dl>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="ignorechildren" class="tsd-anchor"></a>
-					<h3>ignore<wbr>Children</h3>
-					<div class="tsd-signature tsd-kind-icon">ignore<wbr>Children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L7">lib/BSTreeViewEventOptions.ts:7</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="lazyload" class="tsd-anchor"></a>
-					<h3>lazy<wbr>Load</h3>
-					<div class="tsd-signature tsd-kind-icon">lazy<wbr>Load<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L9">lib/BSTreeViewEventOptions.ts:9</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="silent" class="tsd-anchor"></a>
-					<h3>silent</h3>
-					<div class="tsd-signature tsd-kind-icon">silent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L6">lib/BSTreeViewEventOptions.ts:6</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>If true no events will be triggered by this action</p>
-						</div>
-					</div>
 				</section>
 			</section>
 		</div>
@@ -223,30 +144,9 @@
 					<li class=" tsd-kind-class">
 						<a href="bstreeviewdisableoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Disable<wbr>Options</a>
 					</li>
-				</ul>
-				<ul class="current">
-					<li class="current tsd-kind-class">
+					<li class=" tsd-kind-class">
 						<a href="bstreevieweventoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Event<wbr>Options</a>
-						<ul>
-							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="bstreevieweventoptions.html#constructor" class="tsd-kind-icon">constructor</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
-								<a href="bstreevieweventoptions.html#_force" class="tsd-kind-icon">_force</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="bstreevieweventoptions.html#ignorechildren" class="tsd-kind-icon">ignore<wbr>Children</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="bstreevieweventoptions.html#lazyload" class="tsd-kind-icon">lazy<wbr>Load</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="bstreevieweventoptions.html#silent" class="tsd-kind-icon">silent</a>
-							</li>
-						</ul>
 					</li>
-				</ul>
-				<ul class="after-current">
 					<li class=" tsd-kind-class">
 						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
 					</li>
@@ -265,9 +165,18 @@
 					<li class=" tsd-kind-class tsd-is-private">
 						<a href="bstreeviewtemplate.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Template</a>
 					</li>
-					<li class=" tsd-kind-class">
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-class">
 						<a href="faiconthemeclass.html" class="tsd-kind-icon">FAIcon<wbr>Theme<wbr>Class</a>
+						<ul>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="faiconthemeclass.html#getoptions" class="tsd-kind-icon">get<wbr>Options</a>
+							</li>
+						</ul>
 					</li>
+				</ul>
+				<ul class="after-current">
 					<li class=" tsd-kind-interface">
 						<a href="../interfaces/bstreeviewtheme.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Theme</a>
 					</li>
