--- a/classes/bstreeviewselectoptions.html
+++ b/classes/bstreeviewselectoptions.html
@@ -66,6 +66,13 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-comment">
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>The options for TreeView selection state functions</p>
+					</div>
+				</div>
+			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
@@ -92,10 +99,11 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-private"><a href="bstreeviewselectoptions.html#_force" class="tsd-kind-icon">_force</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="bstreeviewselectoptions.html#_unselecting" class="tsd-kind-icon">_unselecting</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="bstreeviewselectoptions.html#ignorechildren" class="tsd-kind-icon">ignore<wbr>Children</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="bstreeviewselectoptions.html#lazyload" class="tsd-kind-icon">lazy<wbr>Load</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="bstreeviewselectoptions.html#silent" class="tsd-kind-icon">silent</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreeviewselectoptions.html#unselecting" class="tsd-kind-icon">unselecting</a></li>
 							</ul>
 						</section>
 					</div>
@@ -107,20 +115,20 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">new BSTree<wbr>View<wbr>Select<wbr>Options<span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="bstreeviewselectoptions.html" class="tsd-signature-type">BSTreeViewSelectOptions</a></li>
+						<li class="tsd-signature tsd-kind-icon">new BSTree<wbr>View<wbr>Select<wbr>Options<span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="bstreeviewselectoptions.html" class="tsd-signature-type">BSTreeViewSelectOptions</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in lib/BSTreeViewEventOptions.ts:5</li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L16">lib/BSTreeViewEventOptions.ts:16</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> options: <a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol"> = null</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> options: <a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = null</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="bstreeviewselectoptions.html" class="tsd-signature-type">BSTreeViewSelectOptions</a></h4>
@@ -130,6 +138,45 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-private">
+					<a name="_force" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> _force</h3>
+					<div class="tsd-signature tsd-kind-icon">_force<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
+					<aside class="tsd-sources">
+						<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#_force">_force</a></p>
+						<ul>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L16">lib/BSTreeViewEventOptions.ts:16</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Force a change of the node state, even if the vaklue is not changed. Mostly useful for internal usage</p>
+						</div>
+						<dl class="tsd-comment-tags">
+							<dt>internal</dt>
+							<dd></dd>
+						</dl>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-private">
+					<a name="_unselecting" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> _unselecting</h3>
+					<div class="tsd-signature tsd-kind-icon">_unselecting<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewSelectOptions.ts#L12">lib/BSTreeViewSelectOptions.ts:12</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>For internal use</p>
+						</div>
+						<dl class="tsd-comment-tags">
+							<dt>internal</dt>
+							<dd></dd>
+						</dl>
+					</div>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
 					<a name="ignorechildren" class="tsd-anchor"></a>
 					<h3>ignore<wbr>Children</h3>
@@ -137,7 +184,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#ignorechildren">ignoreChildren</a></p>
 						<ul>
-							<li>Defined in lib/BSTreeViewEventOptions.ts:3</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L7">lib/BSTreeViewEventOptions.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -148,7 +195,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#lazyload">lazyLoad</a></p>
 						<ul>
-							<li>Defined in lib/BSTreeViewEventOptions.ts:5</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L9">lib/BSTreeViewEventOptions.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -159,19 +206,14 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#silent">silent</a></p>
 						<ul>
-							<li>Defined in lib/BSTreeViewEventOptions.ts:2</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L6">lib/BSTreeViewEventOptions.ts:6</a></li>
 						</ul>
 					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="unselecting" class="tsd-anchor"></a>
-					<h3>unselecting</h3>
-					<div class="tsd-signature tsd-kind-icon">unselecting<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in lib/BSTreeViewSelectOptions.ts:6</li>
-						</ul>
-					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>If true no events will be triggered by this action</p>
+						</div>
+					</div>
 				</section>
 			</section>
 		</div>
@@ -185,6 +227,9 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-class">
+						<a href="bs5themeclass.html" class="tsd-kind-icon">BS5<wbr>Theme<wbr>Class</a>
+					</li>
 					<li class=" tsd-kind-class">
 						<a href="bstreesearchoptions.html" class="tsd-kind-icon">BSTree<wbr>Search<wbr>Options</a>
 					</li>
@@ -217,6 +262,12 @@
 							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
 								<a href="bstreeviewselectoptions.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-private">
+								<a href="bstreeviewselectoptions.html#_force" class="tsd-kind-icon">_force</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
+								<a href="bstreeviewselectoptions.html#_unselecting" class="tsd-kind-icon">_unselecting</a>
+							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
 								<a href="bstreeviewselectoptions.html#ignorechildren" class="tsd-kind-icon">ignore<wbr>Children</a>
 							</li>
@@ -226,13 +277,22 @@
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
 								<a href="bstreeviewselectoptions.html#silent" class="tsd-kind-icon">silent</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="bstreeviewselectoptions.html#unselecting" class="tsd-kind-icon">unselecting</a>
-							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-class tsd-is-private">
+						<a href="bstreeviewtemplate.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Template</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="faiconthemeclass.html" class="tsd-kind-icon">FAIcon<wbr>Theme<wbr>Class</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="../interfaces/bstreeviewtheme.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Theme</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-private">
+						<a href="../globals.html#base_class" class="tsd-kind-icon">BASE_<wbr>CLASS</a>
+					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#event_destroyed" class="tsd-kind-icon">EVENT_<wbr>DESTROYED</a>
 					</li>
@@ -281,9 +341,6 @@
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#event_search_completed" class="tsd-kind-icon">EVENT_<wbr>SEARCH_<wbr>COMPLETED</a>
 					</li>
-					<li class=" tsd-kind-variable">
-						<a href="../globals.html#pluginname" class="tsd-kind-icon">plugin<wbr>Name</a>
-					</li>
 					<li class=" tsd-kind-function">
 						<a href="../globals.html#templateelement" class="tsd-kind-icon">template<wbr>Element</a>
 					</li>
@@ -307,6 +364,10 @@
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
