--- a/globals.html
+++ b/globals.html
@@ -70,6 +70,7 @@
 						<section class="tsd-index-section ">
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-class"><a href="classes/bs5themeclass.html" class="tsd-kind-icon">BS5<wbr>Theme<wbr>Class</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreesearchoptions.html" class="tsd-kind-icon">BSTree<wbr>Search<wbr>Options</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeview.html" class="tsd-kind-icon">BSTree<wbr>View</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeviewdisableoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Disable<wbr>Options</a></li>
@@ -79,11 +80,20 @@
 								<li class="tsd-kind-class"><a href="classes/bstreeviewnodestate.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Node<wbr>State</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeviewoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Options</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeviewselectoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Select<wbr>Options</a></li>
+								<li class="tsd-kind-class tsd-is-private"><a href="classes/bstreeviewtemplate.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Template</a></li>
+								<li class="tsd-kind-class"><a href="classes/faiconthemeclass.html" class="tsd-kind-icon">FAIcon<wbr>Theme<wbr>Class</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section ">
+							<h3>Interfaces</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-interface"><a href="interfaces/bstreeviewtheme.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Theme</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Variables</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-is-private"><a href="globals.html#base_class" class="tsd-kind-icon">BASE_<wbr>CLASS</a></li>
 								<li class="tsd-kind-variable"><a href="globals.html#event_destroyed" class="tsd-kind-icon">EVENT_<wbr>DESTROYED</a></li>
 								<li class="tsd-kind-variable"><a href="globals.html#event_initialized" class="tsd-kind-icon">EVENT_<wbr>INITIALIZED</a></li>
 								<li class="tsd-kind-variable"><a href="globals.html#event_loading" class="tsd-kind-icon">EVENT_<wbr>LOADING</a></li>
@@ -100,7 +110,6 @@
 								<li class="tsd-kind-variable"><a href="globals.html#event_rendered" class="tsd-kind-icon">EVENT_<wbr>RENDERED</a></li>
 								<li class="tsd-kind-variable"><a href="globals.html#event_search_cleared" class="tsd-kind-icon">EVENT_<wbr>SEARCH_<wbr>CLEARED</a></li>
 								<li class="tsd-kind-variable"><a href="globals.html#event_search_completed" class="tsd-kind-icon">EVENT_<wbr>SEARCH_<wbr>COMPLETED</a></li>
-								<li class="tsd-kind-variable"><a href="globals.html#pluginname" class="tsd-kind-icon">plugin<wbr>Name</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -114,13 +123,25 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-private">
+					<a name="base_class" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> <span class="tsd-flag ts-flagConst">Const</span> BASE_<wbr>CLASS</h3>
+					<div class="tsd-signature tsd-kind-icon">BASE_<wbr>CLASS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"treeview"</span><span class="tsd-signature-symbol"> = &quot;treeview&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeView.ts#L30">lib/BSTreeView.ts:30</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+					</div>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable">
 					<a name="event_destroyed" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> EVENT_<wbr>DESTROYED</h3>
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>DESTROYED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:destroyed"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:destroyed&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:5</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L5">lib/BSTreeViewEventNames.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -130,7 +151,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>INITIALIZED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:initialized"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:initialized&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:2</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L2">lib/BSTreeViewEventNames.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -140,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>LOADING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:loading"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:loading&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeView.ts:29</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L16">lib/BSTreeViewEventNames.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -150,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>LOADING_<wbr>FAILED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:loadingFailed"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:loadingFailed&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:1</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L1">lib/BSTreeViewEventNames.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -160,7 +181,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>CHECKED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeChecked"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeChecked&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:6</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L6">lib/BSTreeViewEventNames.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -170,7 +191,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>COLLAPSED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeCollapsed"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeCollapsed&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:7</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L7">lib/BSTreeViewEventNames.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -180,7 +201,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>DISABLED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeDisabled"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeDisabled&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:8</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L8">lib/BSTreeViewEventNames.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -190,7 +211,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>ENABLED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeEnabled"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeEnabled&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:9</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L9">lib/BSTreeViewEventNames.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -200,7 +221,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>EXPANDED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeExpanded"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeExpanded&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:10</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L10">lib/BSTreeViewEventNames.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -210,7 +231,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>RENDERED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeRendered"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeRendered&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:3</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L3">lib/BSTreeViewEventNames.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -220,7 +241,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>SELECTED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeSelected"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeSelected&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:11</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L11">lib/BSTreeViewEventNames.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -230,7 +251,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>UNCHECKED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeUnchecked"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeUnchecked&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:12</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L12">lib/BSTreeViewEventNames.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -240,7 +261,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>UNSELECTED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeUnselected"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeUnselected&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:13</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L13">lib/BSTreeViewEventNames.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -250,7 +271,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>RENDERED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:rendered"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:rendered&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:4</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L4">lib/BSTreeViewEventNames.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -260,7 +281,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>SEARCH_<wbr>CLEARED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:searchCleared"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:searchCleared&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:15</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L15">lib/BSTreeViewEventNames.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -270,17 +291,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>SEARCH_<wbr>COMPLETED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:searchCompleted"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:searchCompleted&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in lib/BSTreeViewEventNames.ts:14</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-variable">
-					<a name="pluginname" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> plugin<wbr>Name</h3>
-					<div class="tsd-signature tsd-kind-icon">plugin<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"treeview"</span><span class="tsd-signature-symbol"> = &quot;treeview&quot;</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in lib/BSTreeView.ts:27</li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L14">lib/BSTreeViewEventNames.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -297,7 +308,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in lib/BSTreeView.ts:31</li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewTemplate.ts#L1">lib/BSTreeViewTemplate.ts:1</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -326,6 +337,9 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class">
+						<a href="classes/bs5themeclass.html" class="tsd-kind-icon">BS5<wbr>Theme<wbr>Class</a>
+					</li>
+					<li class=" tsd-kind-class">
 						<a href="classes/bstreesearchoptions.html" class="tsd-kind-icon">BSTree<wbr>Search<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
@@ -351,6 +365,18 @@
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="classes/bstreeviewselectoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Select<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-class tsd-is-private">
+						<a href="classes/bstreeviewtemplate.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Template</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/faiconthemeclass.html" class="tsd-kind-icon">FAIcon<wbr>Theme<wbr>Class</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/bstreeviewtheme.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Theme</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-private">
+						<a href="globals.html#base_class" class="tsd-kind-icon">BASE_<wbr>CLASS</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#event_destroyed" class="tsd-kind-icon">EVENT_<wbr>DESTROYED</a>
@@ -400,9 +426,6 @@
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#event_search_completed" class="tsd-kind-icon">EVENT_<wbr>SEARCH_<wbr>COMPLETED</a>
 					</li>
-					<li class=" tsd-kind-variable">
-						<a href="globals.html#pluginname" class="tsd-kind-icon">plugin<wbr>Name</a>
-					</li>
 					<li class=" tsd-kind-function">
 						<a href="globals.html#templateelement" class="tsd-kind-icon">template<wbr>Element</a>
 					</li>
@@ -426,6 +449,10 @@
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
